--- a/health-monitor-backend/package.json
+++ b/health-monitor-backend/package.json
@@ -7,7 +7,11 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:unit": "jest --testPathPattern=tests/(?!integration) --coverage",
+    "test:integration": "jest --testPathPattern=tests/integration --coverage",
+    "lint": "eslint src/ tests/",
+    "lint:fix": "eslint src/ tests/ --fix"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +29,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "eslint": "^8.57.1",
     "jest": "^30.2.0",
     "nodemon": "^3.1.11",
     "supertest": "^7.2.2"
