--- a/health-monitor-backend/.github/workflows/ci-cd.yml
+++ b/health-monitor-backend/.github/workflows/ci-cd.yml
@@ -7,8 +7,61 @@ on:
     branches: [ main, develop ]
 
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
+    name: Code Quality - Linting
+    
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm ci
+      working-directory: ./health-monitor-backend
+
+    - name: Run ESLint
+      run: npm run lint
+      working-directory: ./health-monitor-backend
+
+  unit-tests:
+    runs-on: ubuntu-latest
+    name: Unit Tests
+    needs: lint
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm ci
+      working-directory: ./health-monitor-backend
+
+    - name: Run unit tests
+      run: npm run test:unit
+      working-directory: ./health-monitor-backend
+      env:
+        NODE_ENV: test
+
+    - name: Upload unit test coverage
+      uses: actions/upload-artifact@v3
+      with:
+        name: unit-test-coverage
+        path: health-monitor-backend/coverage/
+
+  integration-tests:
+    runs-on: ubuntu-latest
+    name: Integration Tests
+    needs: lint
 
     services:
       mongodb:
@@ -34,11 +87,38 @@ jobs:
       run: npm ci
       working-directory: ./health-monitor-backend
 
-    - name: Run linting
-      run: npm run lint --if-present
+    - name: Run integration tests
+      run: npm run test:integration
+      working-directory: ./health-monitor-backend
+      env:
+        MONGODB_URI: mongodb://localhost:27017/health-monitor-test
+        NODE_ENV: test
+
+    - name: Upload integration test coverage
+      uses: actions/upload-artifact@v3
+      with:
+        name: integration-test-coverage
+        path: health-monitor-backend/coverage/
+
+  test-summary:
+    runs-on: ubuntu-latest
+    name: Test Coverage Summary
+    needs: [unit-tests, integration-tests]
+    
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm ci
       working-directory: ./health-monitor-backend
 
-    - name: Run unit tests
+    - name: Run all tests with coverage
       run: npm test -- --coverage
       working-directory: ./health-monitor-backend
       env:
@@ -49,7 +129,7 @@ jobs:
       uses: codecov/codecov-action@v3
       with:
         files: ./health-monitor-backend/coverage/coverage-final.json
-        flags: unittests
+        flags: alltests
         name: codecov-umbrella
         fail_ci_if_error: false
 
@@ -57,12 +137,13 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v3
       with:
-        name: test-coverage
+        name: test-coverage-complete
         path: health-monitor-backend/coverage/
 
   build:
     runs-on: ubuntu-latest
-    needs: test
+    name: Build Application
+    needs: [unit-tests, integration-tests]
 
     steps:
     - uses: actions/checkout@v3
