--- a/health-monitor-backend/.env.example
+++ b/health-monitor-backend/.env.example
@@ -6,7 +6,8 @@ NODE_ENV=development
 
 # Database
 DB_PASSWORD=your_mongodb_password_here
-MONGODB_URI=mongodb+srv://gozeonx:${DB_PASSWORD}@clusterbegin.17f3yid.mongodb.net/?appName=ClusterBegin
+MONGODB_URI=mongodb+srv://gozeonx:${DB_PASSWORD}@clusterbegin.17f3yid.mongodb.net/health-monitor-backend?appName=ClusterBegin
+MONGODB_COMPLETE_URI=mongodb+srv://gozeonx:your_mongodb_password_here@clusterbegin.17f3yid.mongodb.net/health-monitor-backend?appName=ClusterBegin
 # Or use local MongoDB:
 # MONGODB_URI=mongodb://localhost:27017/health-monitor
 
